src/ariel-os-macros/tests/ui/config/misspelled_config_kind.stderr
error: unsupported parameter (`network`, `usb` are supported)
 --> tests/ui/config/misspelled_config_kind.rs:9:19
  |
9 | #[riot_rs::config(networkk)]
  |                   ^^^^^^^^
